Fixed font-family order on mobile.scss and jwysiwyg.css

--- a/public/stylesheets/jwysiwyg.css
+++ b/public/stylesheets/jwysiwyg.css
@@ -2,7 +2,7 @@
 
 /* css for jwysiwyg */
 body {
-	font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif;
+	font-family: arial, helvetica, "lucida grande", tahoma, verdana, sans-serif;
 	font-size: 16px; 
 	margin: 0px 0px 0px 0px;
 	padding: 5px 30px 0px 10px;  
