--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -60,7 +60,7 @@ p {
   width: $dynamic-width;
   margin: 0 auto;
   overflow: hidden;
-  font-family: "lucida grande", tahoma, verdana, arial, helvetica, sans-serif;
+  font-family: arial, helvetica, "lucida grande", tahoma, verdana, sans-serif;
 }
 
 #canvas {
